update api promotion, hook
